source/components/stock/stock.module.scss
@import "../../scss/vars";
@import "../../scss/mixins";

.stock {
  user-select: none;
  cursor: default;
  will-change: transform;
  -webkit-tap-highlight-color: transparent;
  background-color: $dark-gray;

  &.isSorting {
    tr {
      transform: translateX(40px) scale(0.85);
    }
  }

  td {
    position: relative;
    padding: 0;
  }

  tr {
    vertical-align: baseline;
    transition: transform 0.3s $ease-out;
  }
}

.isSliding {
  .deleteButton,
  .realizeButton {
    visibility: visible;
    transition-delay: 0s;
  }

  .number div:not(.hoverTarget),
  .percentage,
  .ticker {
    opacity: 0.4;
  }
}

.hoverTarget {
  position: absolute;
  z-index: 2;
  height: 100%;
  top: 0;
  right: 0;
  width: 80px;
  // transition: transform 0.3s $ease-out;
  padding-top: 15px;
  box-sizing: border-box;
  will-change: transform;
}

.deleteButton {
  @include button(transparent);
  color: $red;
  margin-left: 10px;
}

.realizeButton {
  @include button(transparent);
  color: $green;
}

.deleteButton,
.realizeButton {
  height: 24px;
  width: 24px;
  padding: 0;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.3s;
}

.firstRow {
  transform-origin: 0 100%;

  td {
    padding-top: 15px;
  }
}

.lastRow {
  transform-origin: 0 0;

  td {
    padding-bottom: 20px;
    box-shadow: inset 0 -1px 0 0 $border-color;
  }
}

.lastRowContent {
  display: flex;
}

.ticker {
  @include font-size-lg;
  font-weight: bold;
  transition: opacity 0.3s;
}

.warning {
  color: $yellow;
  margin-left: 10px;
  vertical-align: middle;
  line-height: 1;

  svg {
    width: 18px;
  }
}

.longName {
  color: $medium-gray;
}

.number {
  @include font-size-lg;
  text-align: right;
  width: 20%;

  div:not(.hoverTarget) {
    transition: opacity 0.3s;
  }
}

.isPositive {
  color: $green;
}

.isNegative {
  color: $red;
}

td.percentage {
  font-weight: normal;
  padding-right: 10px;
  text-align: right;
  transition: opacity 0.3s;
}

.moreStuff {
  color: $medium-gray;
  margin-left: auto;

  span:not(:first-child) {
    padding-left: 20px;
    white-space: nowrap;
  }
}

.sortingHandle {
  position: absolute;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: $medium-gray;
  opacity: 0;
  transition: transform 0.3s $ease-out, opacity 0.3s;
  transform: scale(0.1);
  transform-origin: 100% 50%;

  .isSorting & {
    opacity: 1;
    transform: translateX(-40px) scale((1/0.85));
  }
}

